# pytorch-101

./: .gitignore  README.md  pyproject.toml
notes/: cifar10_.py  torch_light.py
src/torch_mmbot/: __init__.py
