[project]
name = "torch-mmbot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Takaya Imagawa", email = "imataka7@gmail.com" }
]
dependencies = [
    "torch==2.2.0+cu118",
    "torchvision==0.17.0+cu118",
    "torchaudio==2.2.0+cu118",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "matplotlib>=3.7.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "torch_mmbot:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/torch_mmbot"]

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
type = "index"

